--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Mi Página</title>
+  <title>Hubert Gonzalo Condori Nina | Página Personal</title>
+  <meta name="description" content="Sitio web personal de Hubert Gonzalo Condori Nina, estudiante de Ciencias de la Computación y desarrollador de proyectos digitales.">
+  <meta name="author" content="Hubert Gonzalo Condori Nina">
 </head>
 <body>
   <h1>Bienvenido a mi sitio</h1>
-  <p>Puedes visitar mi otra página <a href="gonzweb.html">Ir a mi otra página</a>
+  <p>Puedes visitar mi otra página <a href="gonzweb.html">Ir a mi otra página</a></p>
 </body>
 </html>
