--- a/hubertgonzalocondorinina.html
+++ b/hubertgonzalocondorinina.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Hubert Gonzalo Condori Nina" />
     <meta name="copyright" content="Hubert Gonzalo Condori Nina" />
     <meta name="robots" content="index, follow"/>
-    <title>Mi página</title>
+    <title>Hubert Gonzalo Condori Nina</title>
     <style>
       h2 {
         font-size: 1rem;
@@ -88,4 +88,5 @@
 </body>
 
 </html>
+
 
